--- a/editor js/editor.html
+++ b/editor js/editor.html
@@ -8,6 +8,7 @@
   </head>
   <body style = "background-color:aliceblue;">
     <main>
+        <input type = "button" id = "Download" value = "download"/>
         <input type = "button" class = "Mode" id = "SelectImage" value = "select"/>
         <input type = "button" class = "Mode" id = "Text" value = "text"/>
         <input type = "button" class = "Mode" id = "Marker" value = "marker"/>
@@ -15,6 +16,9 @@
         <input type = "button" class = "Mode" id = "Pencil" value = "pencil"/>
         <input type = "button" class = "Mode" id = "Spray" value = "spray"/>
         <input type = "button" class = "Mode" id = "Eraser" value = "eraser"/>
+        <input type = "button" class = "Mode" id = "Line" value = "line"/>
+        <input type = "button" class = "Mode" id = "Rect" value = "rect"/>
+        <input type = "button" class = "Mode" id = "Ellipse" value = "ellipse"/>
         <div id = "Content" style = "width: 800px; height: 600px; position: relative; left: 100px; top: 50px; overflow: hidden;"></div>
     </main>
   </body>
